2014-09-30  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c (w32_createwindow): Accept an additional argument, an
	array of 2 values specifying the coordinates of the frame's
	top-left corner.  Use these values instead of calling x_get_arg,
	which can cons Lisp objects, and therefore cannot be called except
	from the main thread.  Remove redundant tests for the default
	values.
	(my_create_window): Move the calculation of the coordinates of the
	frame's top-left edge here.  Pass them to the input thread via the
	second parameter of the WM_EMACS_CREATEWINDOW message.  See
	http://lists.gnu.org/archive/html/emacs-devel/2014-09/msg00892.html
	for the details.

2014-09-29  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (cursor_row_fully_visible_p): Update commentary.
	(redisplay_window): Treat the frame's frozen_window_starts flag
	the same way as the optional_new_start flag for the window: only
	obey it if the glyph row showing point will be fully visible.
	Likewise when the window start is in a continuation line.  If,
	after trying everything under the 'force_start' label, point is
	still not fully visible, give up and scroll the window.  Add
	debugging traces.  (Bug#18545)

	* window.c (Frecenter): Set the window's redisplay flag.

2014-09-24  Eli Zaretskii  <eliz@gnu.org>

	* w32term.c (w32_read_socket): Don't use frame dimensions for
	resizing if GetClientRect returned an empty (0, 0, 0, 0)
	rectangle.  Check the return value of GetClientRect, and don't use
	the results if it didn't succeed.

	* dispnew.c (change_frame_size_1): Recompute the frame dimensions
	in columns and lines after correcting the pixel dimensions in
	check_frame_size.
	(adjust_decode_mode_spec_buffer): Add assertion to avoid passing
	negative values to xrealloc.  (Bug#18528)

2014-09-22  Dmitry Antipov  <dmantipov@yandex.ru>

	On OSX, do not free font-specific data more than once (Bug#18501).
	* macfont.m (macfont_close): Release and free font-specific data
	only if it wasn't previously freed.
